--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin:0;
     padding:0;
@@ -75,10 +76,10 @@ body{
     outline: 0;
     border-color: #777;
 }
-.form-control.success input{
+.form-control.success input {
     border-color: #2ecc71;
 }
-.form-control.error input{
+.form-control.error input {
     border-color: #e74c3c;
 }
 .form-control i
@@ -88,11 +89,11 @@ right:12%;
 top: 38px;
 visibility: hidden;
 }
-.form-control i.fa-solid fa-circle-check {
+.form-control.success i.fa-circle-check {
     color:#2ecc71;
     visibility: visible;
 }
-.form-control i.fa-solid fa-circle-exclamation
+.form-control.error i.fa-circle-exclamation
 {
     color: #e74c3c;
     visibility: visible;
@@ -100,7 +101,7 @@ visibility: hidden;
 .form-control small{
     color:#e74c3c;
     position:absolute;
-    bottom: 0;
+    
     left: 0;
     visibility: hidden;
 }
